--- a/src/assets/style/antd.less
+++ b/src/assets/style/antd.less
@@ -1,4 +1,3 @@
-
 .ant-btn {
     margin-right: 10px;
 }
@@ -18,8 +17,12 @@
 
 .ant-menu-dark {
     &.ant-menu-inline {
-      .ant-menu-item-selected {
-        background-color: #5f5f5f !important;
-      }
+        .ant-menu-item-selected {
+            background-color: #5f5f5f !important;
+        }
     }
-  }
+}
+
+.ant-table {
+    font-size: 12px;
+}
